--- a/index.html
+++ b/index.html
@@ -325,6 +325,65 @@
       max-width: 24rem;
     }
 
+    /* Sakura Highlight + Petals for About Section */
+    .about-section {
+      position: relative;
+      overflow: hidden;
+      background:
+        radial-gradient(circle at top left, rgba(244, 180, 214, 0.45), transparent 60%),
+        linear-gradient(to bottom right, rgba(40, 16, 38, 0.98), rgba(24, 10, 24, 0.98));
+      border-color: rgba(244, 180, 214, 0.85);
+      box-shadow: 0 18px 50px rgba(244, 180, 214, 0.25);
+    }
+
+    /* keep the content above the effects */
+    .about-section > * {
+      position: relative;
+      z-index: 1;
+    }
+
+    /* floating sakura petals (soft, subtle) */
+    .about-section::before {
+      content: "";
+      position: absolute;
+      inset: -40%;
+      pointer-events: none;
+      opacity: 0.35;
+      background-image:
+        radial-gradient(ellipse at top, rgba(244, 180, 214, 0.7) 0, transparent 55%),
+        radial-gradient(ellipse at center, rgba(244, 180, 214, 0.6) 0, transparent 60%),
+        radial-gradient(ellipse at bottom, rgba(244, 180, 214, 0.5) 0, transparent 60%);
+      background-size: 30% 30%, 26% 26%, 22% 22%;
+      background-position: 10% -10%, 60% 10%, 90% 40%;
+      animation: sakuraPetals 22s linear infinite;
+    }
+
+    .about-section .calendar-header h3 {
+      color: var(--accent);
+      text-shadow: 0 0 6px rgba(244, 180, 214, 0.5);
+    }
+
+    .about-section .calendar-header p {
+      color: var(--accent-soft);
+    }
+
+    .about-section p {
+      color: var(--accent-soft);
+    }
+
+    /* sakura petal drift animation */
+    @keyframes sakuraPetals {
+      0% {
+        transform: translate3d(0, -20px, 0) rotate(0deg);
+      }
+      50% {
+        transform: translate3d(-20px, 20px, 0) rotate(6deg);
+      }
+      100% {
+        transform: translate3d(-40px, 50px, 0) rotate(10deg);
+      }
+    }
+
     /* Gallery */
 
     .gallery-grid {
@@ -637,8 +696,8 @@
           </div>
         </section>
 
-        <!-- About the Designer (moved up) -->
-        <section id="about" class="calendar-section" style="margin-top: 2.5rem;">
+        <!-- About the Designer (sakura pink + petals) -->
+        <section id="about" class="calendar-section about-section" style="margin-top: 2.5rem;">
           <div class="calendar-header">
             <h3>About the Designer</h3>
             <p>
@@ -646,7 +705,7 @@
             </p>
           </div>
 
-          <div style="font-size: 0.9rem; color: var(--text); line-height: 1.6;">
+          <div style="font-size: 0.9rem; line-height: 1.6;">
             <p style="margin-bottom: 1rem;">
               Katelyn “Kate the Stitch Witch” Law Sarver is the owner and designer behind Wickedly Stitched by Kate. 
               A Franklin County native with over a decade of sewing experience, Kate creates custom gowns, cosplay, 
@@ -822,7 +881,7 @@
           </div>
         </section>
 
-        <!-- FAQ moved near bottom, above calendar -->
+        <!-- FAQ near bottom, above calendar -->
         <section id="faq" class="calendar-section" style="margin-top: 2.5rem;">
           <div class="calendar-header">
             <h3>FAQ &amp; Policies</h3>
@@ -831,7 +890,7 @@
             </p>
           </div>
 
-          <div style="font-size: 0.9rem; color: var(--text); line-height: 1.6;">
+          <div style="font-size: 0.9rem; color: var(--text); line-height: 1.6%;">
             <h4 style="font-size: 0.9rem; margin-bottom: 0.25rem;">Do you require a deposit?</h4>
             <p style="margin-bottom: 0.9rem;">
               Yes. A <strong>50% deposit</strong> is required to reserve your spot on the schedule and begin work on your project. 
