--- a/index.html
+++ b/index.html
@@ -354,16 +354,19 @@
       z-index: 1;
     }
 
-    /* CRISP Sakura petals using SVG pattern (no blur) */
+    /* Wind-blown CRISP Sakura petals using layered SVG patterns */
     .about-section::before {
       content: "";
       position: absolute;
       inset: -10px;
       pointer-events: none;
-      opacity: 0.45;
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80'%3E%3Cg fill='none' stroke='%23f4b4d6' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M18 22c3 2 4 5 3 8-3-1-6-2-8-5 1-2 3-3 5-3z'/%3E%3Cpath d='M54 16c3 2 4 5 3 8-3-1-6-2-8-5 1-2 3-3 5-3z'/%3E%3Cpath d='M40 46c2.5 2 3.5 4.5 2.5 7.5-2.8-1-5.3-2-7.5-4.5 1-2 2.8-3 5-3z'/%3E%3Cpath d='M12 56c2 1.5 2.8 3.5 2 5.8-2.2-.7-4.2-1.5-5.8-3.5C9 57 10.4 56 12 56z'/%3E%3Cpath d='M62 60c2.2 1.6 3.2 3.8 2.4 6.2-2.4-.8-4.6-1.7-6.4-3.8C59 61 60.4 60.2 62 60z'/%3E%3C/g%3E%3C/svg%3E");
+      opacity: 0.5;
+      background-image:
+        url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='80'%3E%3Cg fill='none' stroke='%23f4b4d6' stroke-width='1.1' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M18 20c2.4 1.6 3.4 3.8 2.6 6.2-2.4-.8-4.6-1.6-6.2-3.8C15.2 21 16.6 20.2 18 20z'/%3E%3Cpath d='M52 10c2.2 1.5 3.2 3.6 2.5 5.9-2.3-.8-4.4-1.6-5.9-3.7.9-1.7 2.2-2.5 3.4-2.2z'/%3E%3Cpath d='M88 26c2.3 1.6 3.3 3.8 2.6 6.1-2.4-.8-4.5-1.7-6.2-3.8 1-1.8 2.3-2.7 3.6-2.3z'/%3E%3Cpath d='M32 48c2 1.4 2.9 3.3 2.2 5.4-2.1-.7-3.9-1.5-5.4-3.2.9-1.6 1.9-2.4 3.2-2.2z'/%3E%3Cpath d='M70 58c2.1 1.5 3 3.5 2.3 5.7-2.2-.7-4.1-1.6-5.7-3.4 1-1.6 2.1-2.4 3.4-2.3z'/%3E%3C/g%3E%3C/svg%3E"),
+        url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='140' height='90'%3E%3Cg fill='none' stroke='%23f9c1de' stroke-width='1' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M26 18c2.2 1.5 3.1 3.4 2.3 5.6-2.1-.7-3.9-1.4-5.5-3.2.9-1.7 2-2.5 3.2-2.4z'/%3E%3Cpath d='M60 30c2.3 1.5 3.3 3.7 2.5 6-2.3-.8-4.3-1.7-6-3.6 1-1.8 2.2-2.7 3.5-2.4z'/%3E%3Cpath d='M96 44c2.1 1.4 3 3.3 2.3 5.5-2.1-.7-4-1.5-5.6-3.3.9-1.6 2-2.4 3.3-2.2z'/%3E%3Cpath d='M44 60c2 1.3 2.8 3.1 2.1 5.1-2-.7-3.7-1.4-5.1-3 1-1.5 1.9-2.3 3-2.1z'/%3E%3C/g%3E%3C/svg%3E");
       background-repeat: repeat;
-      background-size: 120px 120px;
+      background-size: 180px 120px, 220px 140px;
+      background-position: -40px -10px, 60px 30px;
     }
 
     .about-section .calendar-header h3 {
