--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
       box-shadow: 0 18px 50px var(--emerald-glow);
       width: 100%;
       text-align: center;
-      transition: transform 0.15s ease-out, filter 0.15s ease-out, box-shadow 0.15s ease-out;
+      transition: transform 0.15s ease-out, filter 0.15s.ease-out, box-shadow 0.15s ease-out;
     }
 
     .button-primary:hover {
@@ -739,7 +739,7 @@
             </p>
           </div>
 
-          <div style="font-size: 0.9rem; color: var(--text); line-height: 1.6%;">
+          <div style="font-size: 0.9rem; color: var(--text); line-height: 1.6;">
             <!-- FORMAL GOWNS -->
             <h4 style="text-transform: uppercase; letter-spacing: 0.18em; font-size: 0.8rem; margin-bottom: 0.25rem;">
               Formal Gowns
@@ -893,7 +893,7 @@
             </p>
           </div>
 
-          <div style="font-size: 0.9rem; color: var(--text); line-height: 1.6%;">
+          <div style="font-size: 0.9rem; color: var(--text); line-height: 1.6;">
             <h4 style="font-size: 0.9rem; margin-bottom: 0.25rem;">Do you require a deposit?</h4>
             <p style="margin-bottom: 0.9rem;">
               Yes. A <strong>50% deposit</strong> is required to reserve your spot on the schedule and begin work on your project. 
